--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/be.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/be.json
@@ -1,5 +1,6 @@
 {
   "loc.browser.arguments": "Атрымалі стартавыя аргументы браўзэра з settings файла: {0}",
+  "loc.browser.excludedArguments": "Выключэнне аргументаў браўзэра з settings файла: {0}",
   "loc.browser.back": "Вяртаемся да папярэдняй старонкі",
   "loc.browser.forward": "Пераходзім да наступнай старонкі",
   "loc.browser.capabilities": "Атрымалі capabilities браўзэра з settings файла: {0}",
