- Add SetAttribute JsAction - Implement example test to handle DOM mutations

--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/be.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/be.json
@@ -41,6 +41,7 @@
   "loc.combobox.values": "Спіс значэнняў: [{0}]",
   "loc.el.getattr": "Атрымліваем атрыбут '{0}'",
   "loc.el.attr.value": "Значэнне атрыбута '{0}': [{1}]",
+  "loc.el.attr.set": "Задаем значэнне атрыбута '{0}': [{1}]",
   "loc.el.cssvalue": "Атрымліваем значэнне css '{0}'",
   "loc.focusing": "Факусуемся",
   "loc.get.text": "Атрымліваем тэкст элемента",
