--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
@@ -41,6 +41,7 @@
   "loc.combobox.values": "Список значений: [{0}]",
   "loc.el.getattr": "Получение аттрибута '{0}'",
   "loc.el.attr.value": "Значение аттрибута '{0}': [{1}]",
+  "loc.el.attr.set": "Установка значения аттрибута '{0}': [{1}]",
   "loc.el.cssvalue": "Получение значения css '{0}'",
   "loc.focusing": "Взятие элемента в фокус",
   "loc.get.text": "Получение текста элемента",
