Add localized logging values for JavaScriptHandling methods

--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/be.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/be.json
@@ -86,6 +86,30 @@
   "loc.browser.network.handler.response.clear": "Ачышчаем апрацоўшчыкі сеткавых адказаў",
   "loc.browser.network.monitoring.start": "Пачынаем сеткавы маніторынг",
   "loc.browser.network.monitoring.stop": "Спыняем сеткавы маніторынг",
+  "loc.browser.javascript.initializationscripts.get": "Атрымліваем ініцыялізацыйныя скрыпты",
+  "loc.browser.javascript.scriptcallbackbindings.get": "Атрымліваем прывязкі зваротнага выкліку JavaScript",
+  "loc.browser.javascript.event.callbackexecuted.add": "Падпісваемся на падзею выканання іменаванай прывязкі зваротнага выкліку JavaScript",
+  "loc.browser.javascript.event.callbackexecuted.remove": "Адпісваемся ад падзеі выканання іменаванай прывязкі зваротнага выкліку JavaScript",
+  "loc.browser.javascript.event.exceptionthrown.add": "Падпісваемся на падзею падзення памылкі JavaScript",
+  "loc.browser.javascript.event.exceptionthrown.remove": "Адпісваемся ад падзеі падзення памылкі JavaScript",
+  "loc.browser.javascript.event.consoleapicalled.add": "Падпісваемся на падзею выкліку API кансолі JavaScript",
+  "loc.browser.javascript.event.consoleapicalled.remove": "Адпісваемся ад падзеі выкліку API кансолі JavaScript",
+  "loc.browser.javascript.event.dommutated.add": "Падпісваемся на падзею зменаў у DOM",
+  "loc.browser.javascript.event.dommutated.remove": "Адпісваемся ад падзеі зменаў у DOM",
+  "loc.browser.javascript.initializationscript.add": "Дадаем ініцыялізацыйны JavaScript з прыязным іменем '{0}'",
+  "loc.browser.javascript.initializationscript.remove": "Выдаляем ініцыялізацыйны JavaScript з прыязным іменем '{0}'",
+  "loc.browser.javascript.initializationscripts.clear": "Выдаляем усе ініцыялізацыйныя скрыпты",
+  "loc.browser.javascript.scriptcallbackbinding.add": "Дадаем прывязку зваротнага выкліку JavaScript з іменем '{0}'",
+  "loc.browser.javascript.scriptcallbackbinding.remove": "Выдаляем прывязку зваротнага выкліку JavaScript з іменем '{0}'",
+  "loc.browser.javascript.scriptcallbackbindings.clear": "Выдаляем усе прывязкі зваротнага выкліку JavaScript",
+  "loc.browser.javascript.dommutation.monitoring.enable": "Уключаем маніторынг зменаў у DOM",
+  "loc.browser.javascript.dommutation.monitoring.disable": "Выключаем маніторынг зменаў у DOM",
+  "loc.browser.javascript.snippet.pin": "Замацоўваем фрагмент JavaScript",
+  "loc.browser.javascript.snippet.unpin": "Адмацоўваем фрагмент JavaScript",
+  "loc.browser.javascript.event.monitoring.start": "Пачынаем маніторынг падзеяў JavaScript",
+  "loc.browser.javascript.event.monitoring.stop": "Спыняем маніторынг падзеяў JavaScript",
+  "loc.browser.javascript.clearall": "Выдаляем усе прывязкі зваротнага выкліку JavaScript і ініцыялізацыйныя скрыпты",
+  "loc.browser.javascript.reset": "Выдаляем усе прывязкі зваротнага выкліку JavaScript і ініцыялізацыйныя скрыпты, і спыняем чаканне падзеяў",
   "loc.shadowroot.expand": "Разварочваем дрэва схаваных элементаў",
   "loc.shadowroot.expand.js": "Разварочваем дрэва схаваных элементаў праз JavaScript"
 }
