--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
@@ -86,6 +86,30 @@
   "loc.browser.network.handler.response.clear": "Очистка обработчиков сетевых ответов",
   "loc.browser.network.monitoring.start": "Начинаем сетевой мониторинг",
   "loc.browser.network.monitoring.stop": "Останавливаем сетевой мониторинг",
+  "loc.browser.javascript.initializationscripts.get": "Получение инициализационных скриптов",
+  "loc.browser.javascript.scriptcallbackbindings.get": "Получение привязок обратного вызова JavaScript",
+  "loc.browser.javascript.event.callbackexecuted.add": "Подписываемся на событие исполнения именованной привязки обратного вызова JavaScript",
+  "loc.browser.javascript.event.callbackexecuted.remove": "Отписываемся от события исполнения именованной привязки обратного вызова JavaScript",
+  "loc.browser.javascript.event.exceptionthrown.add": "Подписываемся на событие падения ошибки JavaScript",
+  "loc.browser.javascript.event.exceptionthrown.remove": "Отписываемся от события падения ошибки JavaScript",
+  "loc.browser.javascript.event.consoleapicalled.add": "Подписываемся на событие вызова API консоли JavaScript",
+  "loc.browser.javascript.event.consoleapicalled.remove": "Отписываемся от события вызова API консоли JavaScript",
+  "loc.browser.javascript.event.dommutated.add": "Подписываемся на событие изменений в DOM",
+  "loc.browser.javascript.event.dommutated.remove": "Отписываемся от события изменений в DOM",
+  "loc.browser.javascript.initializationscript.add": "Добавление инициализационного JavaScript с дружелюбным именем '{0}'",
+  "loc.browser.javascript.initializationscript.remove": "Удаление инициализационного JavaScript с дружелюбным именем '{0}'",
+  "loc.browser.javascript.initializationscripts.clear": "Удаление всех инициализационных скриптов",
+  "loc.browser.javascript.scriptcallbackbinding.add": "Добавление привязки обратного вызова JavaScript с именем '{0}'",
+  "loc.browser.javascript.scriptcallbackbinding.remove": "Удаление привязки обратного вызова JavaScript с именем'{0}'",
+  "loc.browser.javascript.scriptcallbackbindings.clear": "Удаление всех привязок обратного вызова JavaScript",
+  "loc.browser.javascript.dommutation.monitoring.enable": "Включение мониторинга изменений в DOM",
+  "loc.browser.javascript.dommutation.monitoring.disable": "Отключение мониторинга изменений в DOM",
+  "loc.browser.javascript.snippet.pin": "Закрепление фрагмента JavaScript",
+  "loc.browser.javascript.snippet.unpin": "Открепление фрагмента JavaScript",
+  "loc.browser.javascript.event.monitoring.start": "Начинаем мониторинг событий JavaScript",
+  "loc.browser.javascript.event.monitoring.stop": "Останавливаем мониторинг событий JavaScript",
+  "loc.browser.javascript.clearall": "Удаляем все привязки обратного вызова JavaScript и инициализационные скрипты",
+  "loc.browser.javascript.reset": "Удаляем все привязки обратного вызова JavaScript и инициализационные скрипты, и останавливаем прослушивание событий",
   "loc.shadowroot.expand": "Разворачиваем дерево скрытых элементов",
   "loc.shadowroot.expand.js": "Разворачиваем дерево скрытых элементов посредством JavaScript"
 }
