- Add PinnedScript extensions and element's JsActions - Add localization logger values for new methods - Implemented tests for PinnedScripts

--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
@@ -43,6 +43,8 @@
   "loc.el.attr.value": "Value of attribute '{0}': [{1}]",
   "loc.el.attr.set": "Setting value of attribute '{0}': [{1}]",
   "loc.el.cssvalue": "Getting css value '{0}'",
+  "loc.el.execute.pinnedjs": "Executing pinned JavaScript",
+  "loc.el.execute.pinnedjs.result": "Result of pinned JavaScript execution: [{0}]",
   "loc.focusing": "Focusing",
   "loc.get.text": "Getting text from element",
   "loc.text.value": "Element's text: [{0}]",
