--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/be.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/be.json
@@ -24,7 +24,7 @@
   "loc.checkable.state": "Стан: [{0}]",
   "loc.clicking": "Націскаем",
   "loc.clicking.double": "Падвойна націскаем",
-  "loc.clicking.js": "Націскаем праз Javascript",
+  "loc.clicking.js": "Націскаем праз JavaScript",
   "loc.clicking.right": "Націскаем правай кнопкай",
   "loc.combobox": "Камбабокс",
   "loc.combobox.getting.selected.text": "Атрымліваем выбраны тэкст",
@@ -43,10 +43,12 @@
   "loc.el.attr.value": "Значэнне атрыбута '{0}': [{1}]",
   "loc.el.attr.set": "Задаем значэнне атрыбута '{0}': [{1}]",
   "loc.el.cssvalue": "Атрымліваем значэнне css '{0}'",
+  "loc.el.execute.pinnedjs": "Выконваем замацаваны JavaScript",
+  "loc.el.execute.pinnedjs.result": "Вынік выканання замацаванага JavaScript: [{0}]",
   "loc.focusing": "Факусуемся",
   "loc.get.text": "Атрымліваем тэкст элемента",
   "loc.text.value": "Тэкст элемента: [{0}]",
-  "loc.get.text.js": "Атрымліваем тэкст элемента праз Javascript",
+  "loc.get.text.js": "Атрымліваем тэкст элемента праз JavaScript",
   "loc.hover.js": "Наводзім курсор мышы на элемент праз JavaScript",
   "loc.is.present.js": "Вызначаем, ці прысутны элемент на экране, праз JavaScript",
   "loc.is.present.value": "Ці прысутны элемент на экране: [{0}]",
