Add localization values and fix logging

--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/be.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/be.json
@@ -73,6 +73,13 @@
   "loc.browser.get.tab.handle": "Атрыманне дэскрыптара бягучай укладкі",
   "loc.browser.tab.open.new": "Адкрыццё новай укладкі",
   "loc.browser.tab.close": "Закрыццё ўкладкі",
+  "loc.browser.devtools.session.isactive": "Правяраем, ці актыўная DevTools сэсія",
+  "loc.browser.devtools.session.isactive.result": "Ці актыўная DevTools сэсія: [{0}]",
+  "loc.browser.devtools.session.close": "Завяршаем сэсію DevTools",
+  "loc.browser.devtools.session.get": "Атрымліваем сэсію DevTools з версіяй пратакола [{0}]",
+  "loc.browser.devtools.command.execute": "Выконваем DevTools каманду [{0}]",
+  "loc.browser.devtools.command.execute.withparams": "Выконваем DevTools каманду [{0}] з параметрамі [{1}]",
+  "loc.browser.devtools.command.execute.result": "Вынік DevTools каманды: [{0}]",
   "loc.browser.network.event.requestsent.add": "Падпісваемся на падзею адпраўкі сеткавага запыта",
   "loc.browser.network.event.requestsent.remove": "Адпісваемся ад падзеі адпраўкі сеткавага запыта",
   "loc.browser.network.event.responsereceived.add": "Падпісваемся на падзею атрымання сеткавага адказа",
