--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
@@ -73,6 +73,13 @@
   "loc.browser.get.tab.handle": "Получение дескриптора текущей вкладки",
   "loc.browser.tab.open.new": "Открытие новой вкладки",
   "loc.browser.tab.close": "Закрытие вкладки",
+  "loc.browser.devtools.session.isactive": "Проверка, активна ли сессия DevTools",
+  "loc.browser.devtools.session.isactive.result": "Активна ли DevTools сессия: [{0}]",
+  "loc.browser.devtools.session.close": "Завершение DevTools сессии",
+  "loc.browser.devtools.session.get": "Получение DevTools сессии с версией протокола [{0}]",
+  "loc.browser.devtools.command.execute": "Исполняем DevTools команду [{0}]",
+  "loc.browser.devtools.command.execute.withparams": "Исполняем DevTools команду [{0}] с параметрами [{1}]",
+  "loc.browser.devtools.command.execute.result": "Результат DevTools команды: [{0}]",
   "loc.browser.network.event.requestsent.add": "Подписываемся на событие отправки сетевого запроса",
   "loc.browser.network.event.requestsent.remove": "Отписываемся от события отправки сетевого запроса",
   "loc.browser.network.event.responsereceived.add": "Подписываемся на событие получения сетевого ответа",
