[BiDi] JavaScript Handling (#213) +semver: feature
* Add JavaScripHandling wrapper over JavaScriptEngine functionality

* Fix the compilation error, update the code documentation

* - Add SetAttribute JsAction
- Implement example test to handle DOM mutations

* Add localized logging values for JavaScriptHandling methods

* - Add PinnedScript extensions and element's JsActions
- Add localization logger values for new methods
- Implemented tests for PinnedScripts

* Implement all tests for JavaScriptHandling functionality:
- for adding script callback bindings
- for adding initialization scripts
- for subscribing to JS exceptions and console API calls
Also fix ScriptCallbackBindings property of IJavaScriptEngine

--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/be.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/be.json
@@ -25,7 +25,7 @@
   "loc.checkable.state": "Стан: [{0}]",
   "loc.clicking": "Націскаем",
   "loc.clicking.double": "Падвойна націскаем",
-  "loc.clicking.js": "Націскаем праз Javascript",
+  "loc.clicking.js": "Націскаем праз JavaScript",
   "loc.clicking.right": "Націскаем правай кнопкай",
   "loc.combobox": "Камбабокс",
   "loc.combobox.getting.selected.text": "Атрымліваем выбраны тэкст",
@@ -42,11 +42,14 @@
   "loc.combobox.values": "Спіс значэнняў: [{0}]",
   "loc.el.getattr": "Атрымліваем атрыбут '{0}'",
   "loc.el.attr.value": "Значэнне атрыбута '{0}': [{1}]",
+  "loc.el.attr.set": "Задаем значэнне атрыбута '{0}': [{1}]",
   "loc.el.cssvalue": "Атрымліваем значэнне css '{0}'",
+  "loc.el.execute.pinnedjs": "Выконваем замацаваны JavaScript",
+  "loc.el.execute.pinnedjs.result": "Вынік выканання замацаванага JavaScript: [{0}]",
   "loc.focusing": "Факусуемся",
   "loc.get.text": "Атрымліваем тэкст элемента",
   "loc.text.value": "Тэкст элемента: [{0}]",
-  "loc.get.text.js": "Атрымліваем тэкст элемента праз Javascript",
+  "loc.get.text.js": "Атрымліваем тэкст элемента праз JavaScript",
   "loc.hover.js": "Наводзім курсор мышы на элемент праз JavaScript",
   "loc.is.present.js": "Вызначаем, ці прысутны элемент на экране, праз JavaScript",
   "loc.is.present.value": "Ці прысутны элемент на экране: [{0}]",
@@ -86,6 +89,30 @@
   "loc.browser.network.handler.response.clear": "Ачышчаем апрацоўшчыкі сеткавых адказаў",
   "loc.browser.network.monitoring.start": "Пачынаем сеткавы маніторынг",
   "loc.browser.network.monitoring.stop": "Спыняем сеткавы маніторынг",
+  "loc.browser.javascript.initializationscripts.get": "Атрымліваем ініцыялізацыйныя скрыпты",
+  "loc.browser.javascript.scriptcallbackbindings.get": "Атрымліваем прывязкі зваротнага выкліку JavaScript",
+  "loc.browser.javascript.event.callbackexecuted.add": "Падпісваемся на падзею выканання іменаванай прывязкі зваротнага выкліку JavaScript",
+  "loc.browser.javascript.event.callbackexecuted.remove": "Адпісваемся ад падзеі выканання іменаванай прывязкі зваротнага выкліку JavaScript",
+  "loc.browser.javascript.event.exceptionthrown.add": "Падпісваемся на падзею падзення памылкі JavaScript",
+  "loc.browser.javascript.event.exceptionthrown.remove": "Адпісваемся ад падзеі падзення памылкі JavaScript",
+  "loc.browser.javascript.event.consoleapicalled.add": "Падпісваемся на падзею выкліку API кансолі JavaScript",
+  "loc.browser.javascript.event.consoleapicalled.remove": "Адпісваемся ад падзеі выкліку API кансолі JavaScript",
+  "loc.browser.javascript.event.dommutated.add": "Падпісваемся на падзею зменаў у DOM",
+  "loc.browser.javascript.event.dommutated.remove": "Адпісваемся ад падзеі зменаў у DOM",
+  "loc.browser.javascript.initializationscript.add": "Дадаем ініцыялізацыйны JavaScript з прыязным іменем '{0}'",
+  "loc.browser.javascript.initializationscript.remove": "Выдаляем ініцыялізацыйны JavaScript з прыязным іменем '{0}'",
+  "loc.browser.javascript.initializationscripts.clear": "Выдаляем усе ініцыялізацыйныя скрыпты",
+  "loc.browser.javascript.scriptcallbackbinding.add": "Дадаем прывязку зваротнага выкліку JavaScript з іменем '{0}'",
+  "loc.browser.javascript.scriptcallbackbinding.remove": "Выдаляем прывязку зваротнага выкліку JavaScript з іменем '{0}'",
+  "loc.browser.javascript.scriptcallbackbindings.clear": "Выдаляем усе прывязкі зваротнага выкліку JavaScript",
+  "loc.browser.javascript.dommutation.monitoring.enable": "Уключаем маніторынг зменаў у DOM",
+  "loc.browser.javascript.dommutation.monitoring.disable": "Выключаем маніторынг зменаў у DOM",
+  "loc.browser.javascript.snippet.pin": "Замацоўваем фрагмент JavaScript",
+  "loc.browser.javascript.snippet.unpin": "Адмацоўваем фрагмент JavaScript",
+  "loc.browser.javascript.event.monitoring.start": "Пачынаем маніторынг падзеяў JavaScript",
+  "loc.browser.javascript.event.monitoring.stop": "Спыняем маніторынг падзеяў JavaScript",
+  "loc.browser.javascript.clearall": "Выдаляем усе прывязкі зваротнага выкліку JavaScript і ініцыялізацыйныя скрыпты",
+  "loc.browser.javascript.reset": "Выдаляем усе прывязкі зваротнага выкліку JavaScript і ініцыялізацыйныя скрыпты, і спыняем чаканне падзеяў",
   "loc.shadowroot.expand": "Разварочваем дрэва схаваных элементаў",
   "loc.shadowroot.expand.js": "Разварочваем дрэва схаваных элементаў праз JavaScript"
 }
