--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
@@ -42,7 +42,10 @@
   "loc.combobox.values": "Option values: [{0}]",
   "loc.el.getattr": "Getting attribute '{0}'",
   "loc.el.attr.value": "Value of attribute '{0}': [{1}]",
+  "loc.el.attr.set": "Setting value of attribute '{0}': [{1}]",
   "loc.el.cssvalue": "Getting css value '{0}'",
+  "loc.el.execute.pinnedjs": "Executing pinned JavaScript",
+  "loc.el.execute.pinnedjs.result": "Result of pinned JavaScript execution: [{0}]",
   "loc.focusing": "Focusing",
   "loc.get.text": "Getting text from element",
   "loc.text.value": "Element's text: [{0}]",
@@ -86,6 +89,30 @@
   "loc.browser.network.handler.response.clear": "Clearing Network Response handler",
   "loc.browser.network.monitoring.start": "Starting Network Monitoring",
   "loc.browser.network.monitoring.stop": "Stopping Network Monitoring",
+  "loc.browser.javascript.initializationscripts.get": "Getting initialization JavaScripts",
+  "loc.browser.javascript.scriptcallbackbindings.get": "Getting JavaScript callback bindings",
+  "loc.browser.javascript.event.callbackexecuted.add": "Subscribing to JavaScript Callback With A Named Binding Is Executed event",
+  "loc.browser.javascript.event.callbackexecuted.remove": "Unsubscribing from JavaScript Callback With A Named Binding Is Executed event",
+  "loc.browser.javascript.event.exceptionthrown.add": "Subscribing to JavaScript Exception Is Thrown event",
+  "loc.browser.javascript.event.exceptionthrown.remove": "Unsubscribing from JavaScript Exception Is Thrown event",
+  "loc.browser.javascript.event.consoleapicalled.add": "Subscribing to JavaScript Console API Is Called event",
+  "loc.browser.javascript.event.consoleapicalled.remove": "Unsubscribing from JavaScript Console API Is Called event",
+  "loc.browser.javascript.event.dommutated.add": "Subscribing to DOM mutated event",
+  "loc.browser.javascript.event.dommutated.remove": "Unsubscribing from DOM mutated event",
+  "loc.browser.javascript.initializationscript.add": "Adding initialization JavaScript with friendly name '{0}'",
+  "loc.browser.javascript.initializationscript.remove": "Removing initialization JavaScript by friendly name '{0}'",
+  "loc.browser.javascript.initializationscripts.clear": "Removing all initialization JavaScripts",
+  "loc.browser.javascript.scriptcallbackbinding.add": "Adding JavaScript callback binding with the name '{0}'",
+  "loc.browser.javascript.scriptcallbackbinding.remove": "Removing JavaScript callback binding with the name '{0}'",
+  "loc.browser.javascript.scriptcallbackbindings.clear": "Removing all JavaScript callback bindings",
+  "loc.browser.javascript.dommutation.monitoring.enable": "Enabling DOM mutation monitoring",
+  "loc.browser.javascript.dommutation.monitoring.disable": "Disabling DOM mutation monitoring",
+  "loc.browser.javascript.snippet.pin": "Pinning JavaScript snippet",
+  "loc.browser.javascript.snippet.unpin": "Unpinning JavaScript snippet",
+  "loc.browser.javascript.event.monitoring.start": "Starting JavaScript Event Monitoring",
+  "loc.browser.javascript.event.monitoring.stop": "Stopping JavaScript Event Monitoring",
+  "loc.browser.javascript.clearall": "Removing all JavaScript callback bindings and initialization JavaScripts",
+  "loc.browser.javascript.reset": "Removing all JavaScript callback bindings and initialization JavaScripts, and stopping listening for events",
   "loc.shadowroot.expand": "Expanding the Shadow Root",
   "loc.shadowroot.expand.js": "Expanding the Shadow Root via JavaScript"
 }
