[DevTools][Emulation] Handling of DevTools: emulate GeoLocation, Device, Media, UserAgent (#214) +semver: feature
* [DevTools] Implement DevToolsHandling - Emulation domain

* Fix HasActiveDevToolsSession behavior

* Move GeoLocation override methods to a separate DevToolsEmulationExtensions class

* DevTools Emulation extensions to override device metrics and CanEmulate

* Implement SetUserAgentOverride and SetScriptExecutionDisabled DevTools emulation methods.

* Implement additional extensions: SetTouchEmulationEnabled, SetEmulatedMedia,DisableEmulatedMediaOverride, SetDefaultBackgroundColorOverride, ClearDefaultBackgroundColorOverride

--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
@@ -77,6 +77,13 @@
   "loc.browser.get.tab.handle": "Getting current tab handle",
   "loc.browser.tab.open.new": "Opening new tab",
   "loc.browser.tab.close": "Closing tab",
+  "loc.browser.devtools.session.isactive": "Checking if DevTools session is active",
+  "loc.browser.devtools.session.isactive.result": "Is DevTools session active: [{0}]",
+  "loc.browser.devtools.session.close": "Closing DevTools session",
+  "loc.browser.devtools.session.get": "Getting DevTools session with protocol version [{0}]",
+  "loc.browser.devtools.command.execute": "Executing DevTools command [{0}]",
+  "loc.browser.devtools.command.execute.withparams": "Executing DevTools command [{0}] with parameters [{1}]",
+  "loc.browser.devtools.command.execute.result": "DevTools command result: [{0}]",
   "loc.browser.network.event.requestsent.add": "Subscribing to Network Request Sent event",
   "loc.browser.network.event.requestsent.remove": "Unsubscribing from Network Request Sent event",
   "loc.browser.network.event.responsereceived.add": "Subscribing to Network Response Received event",
