[Feature][DevTools] Logging of HTTP Exchange operations

--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/be.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/be.json
@@ -86,6 +86,12 @@
   "loc.browser.devtools.command.execute.result": "Вынік DevTools каманды: [{0}]",
   "loc.browser.network.event.requestsent.add": "Падпісваемся на падзею адпраўкі сеткавага запыта",
   "loc.browser.network.event.requestsent.remove": "Адпісваемся ад падзеі адпраўкі сеткавага запыта",
+  "loc.browser.network.event.requestsent.log.info": "Адпраўлены HTTP запыт:\r\nМетад: \t\t{0}, \r\nURL: \t\t\t{1}, \r\nID запыта: \t{2}",
+  "loc.browser.network.event.requestsent.log.headers": "Загалоўкі запыта:\r\n{{{0}\r\n}}",
+  "loc.browser.network.event.requestsent.log.data": "POST дадзеныя запыта:\r\n{0}",
+  "loc.browser.network.event.responsereceived.log.info": "Атрыманы HTTP адказ:\r\nСтатус-код: \t{0}, \r\nURL: \t\t\t{1}, \r\nТып рэсурса: \t{2}, \r\nID запыта: \t{3}",
+  "loc.browser.network.event.responsereceived.log.headers": "Загалоўкі адказа:\r\n{{{0}\r\n}}",
+  "loc.browser.network.event.responsereceived.log.body": "Цела адказа:\r\n{0}",
   "loc.browser.network.event.responsereceived.add": "Падпісваемся на падзею атрымання сеткавага адказа",
   "loc.browser.network.event.responsereceived.remove": "Адпісваемся ад падзеі атрымання сеткавага адказа",
   "loc.browser.network.handler.authentication.add": "Дадаем апрацоўшчык базавай аўтэнтыфікацыі",
