--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
@@ -86,6 +86,12 @@
   "loc.browser.devtools.command.execute.result": "Результат DevTools команды: [{0}]",
   "loc.browser.network.event.requestsent.add": "Подписываемся на событие отправки сетевого запроса",
   "loc.browser.network.event.requestsent.remove": "Отписываемся от события отправки сетевого запроса",
+  "loc.browser.network.event.requestsent.log.info": "Отправлен HTTP запрос:\r\nМетод: \t\t{0}, \r\nURL: \t\t\t{1}, \r\nID запроса: \t{2}",
+  "loc.browser.network.event.requestsent.log.headers": "Заголовки запроса:\r\n{{{0}\r\n}}",
+  "loc.browser.network.event.requestsent.log.data": "POST данные запроса:\r\n{0}",
+  "loc.browser.network.event.responsereceived.log.info": "Получен HTTP ответ:\r\nСтатус-код: \t{0}, \r\nURL: \t\t\t{1}, \r\nТип ресурса: \t{2}, \r\nID запроса: \t{3}",
+  "loc.browser.network.event.responsereceived.log.headers": "Заголовки ответа:\r\n{{{0}\r\n}}",
+  "loc.browser.network.event.responsereceived.log.body": "Тело ответа:\r\n{0}",
   "loc.browser.network.event.responsereceived.add": "Подписываемся на событие получения сетевого ответа",
   "loc.browser.network.event.responsereceived.remove": "Отписываемся от события получения сетевого ответа",
   "loc.browser.network.handler.authentication.add": "Добавление обработчика базовой аутентификации",
