Update .NET version and NuGet package versions Add pl and uk localizations

--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
@@ -1,6 +1,6 @@
 {
   "loc.browser.arguments": "Получили стартовые аргументы браузера из settings файла: {0}",
-  "loc.browser.excludedArguments": "Исключение аргументов браузера из settings файла: {0}",
+  "loc.browser.excludedArguments": "Получили исключённые аргументы браузера из settings файла: {0}",
   "loc.browser.back": "Возврат на предыдущую страницу",
   "loc.browser.forward": "Перейти на следующую страницу",
   "loc.browser.capabilities": "Получили capabilities браузера из settings файла: {0}",
@@ -22,7 +22,7 @@
   "loc.button": "Кнопка",
   "loc.checkbox": "Чекбокс",
   "loc.checkable.get.state": "Получение состояния",
-  "loc.checkable.state": "Cостояние: [{0}]",
+  "loc.checkable.state": "Состояние: [{0}]",
   "loc.clicking": "Клик",
   "loc.clicking.double": "Двойной Клик",
   "loc.clicking.js": "Клик посредством JavaScript",
@@ -40,9 +40,9 @@
   "loc.combobox.get.text.js": "Получение списка значений посредством JavaScript",
   "loc.combobox.texts": "Список текстов опций: [{0}]",
   "loc.combobox.values": "Список значений: [{0}]",
-  "loc.el.getattr": "Получение аттрибута '{0}'",
-  "loc.el.attr.value": "Значение аттрибута '{0}': [{1}]",
-  "loc.el.attr.set": "Установка значения аттрибута '{0}': [{1}]",
+  "loc.el.getattr": "Получение атрибута '{0}'",
+  "loc.el.attr.value": "Значение атрибута '{0}': [{1}]",
+  "loc.el.attr.set": "Установка значения атрибута '{0}': [{1}]",
   "loc.el.cssvalue": "Получение значения css '{0}'",
   "loc.el.execute.pinnedjs": "Исполнение закреплённого JavaScript",
   "loc.el.execute.pinnedjs.result": "Результат исполнения закреплённого JavaScript: [{0}]",
