--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
@@ -1,6 +1,6 @@
 {
   "loc.browser.arguments": "Got browser start arguments from settings file: {0}",
-  "loc.browser.excludedArguments": "Exclude browser arguments from settings file: {0}",
+  "loc.browser.excludedArguments": "Got excluded browser arguments from settings file: {0}",
   "loc.browser.back": "Return to previous page",
   "loc.browser.forward": "Proceed to the next page",
   "loc.browser.capabilities": "Got browser capabilities from settings file: {0}",
