[Feature][DevTools] Logging of HTTP Exchange operations (#217) +semver: feature
* [Feature][DevTools] Logging of HTTP Exchange operations

* Update .NET version and NuGet package versions
Add pl and uk localizations

* Update pipeline to use .NET 6

--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
@@ -1,6 +1,6 @@
 {
   "loc.browser.arguments": "Got browser start arguments from settings file: {0}",
-  "loc.browser.excludedArguments": "Exclude browser arguments from settings file: {0}",
+  "loc.browser.excludedArguments": "Got excluded browser arguments from settings file: {0}",
   "loc.browser.back": "Return to previous page",
   "loc.browser.forward": "Proceed to the next page",
   "loc.browser.capabilities": "Got browser capabilities from settings file: {0}",
@@ -86,6 +86,12 @@
   "loc.browser.devtools.command.execute.result": "DevTools command result: [{0}]",
   "loc.browser.network.event.requestsent.add": "Subscribing to Network Request Sent event",
   "loc.browser.network.event.requestsent.remove": "Unsubscribing from Network Request Sent event",
+  "loc.browser.network.event.requestsent.log.info": "Send HTTP Request:\r\nMethod: \t\t{0}, \r\nURL: \t\t\t{1}, \r\nRequest ID: \t{2}",
+  "loc.browser.network.event.requestsent.log.headers": "Request headers:\r\n{{{0}\r\n}}",
+  "loc.browser.network.event.requestsent.log.data": "Request POST data:\r\n{0}",
+  "loc.browser.network.event.responsereceived.log.info": "Received HTTP Response:\r\nStatus code: \t{0}, \r\nURL: \t\t\t{1}, \r\nResource type: \t{2}, \r\nRequest ID: \t{3}",
+  "loc.browser.network.event.responsereceived.log.headers": "Response headers:\r\n{{{0}\r\n}}",
+  "loc.browser.network.event.responsereceived.log.body": "Response body:\r\n{0}",
   "loc.browser.network.event.responsereceived.add": "Subscribing to Network Response Received event",
   "loc.browser.network.event.responsereceived.remove": "Unsubscribing from Network Response Received event",
   "loc.browser.network.handler.authentication.add": "Adding Basic Authentication handler",
