--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
@@ -1,6 +1,6 @@
 {
   "loc.browser.arguments": "Получили стартовые аргументы браузера из settings файла: {0}",
-  "loc.browser.excludedArguments": "Исключение аргументов браузера из settings файла: {0}",
+  "loc.browser.excludedArguments": "Получили исключённые аргументы браузера из settings файла: {0}",
   "loc.browser.back": "Возврат на предыдущую страницу",
   "loc.browser.forward": "Перейти на следующую страницу",
   "loc.browser.capabilities": "Получили capabilities браузера из settings файла: {0}",
@@ -22,7 +22,7 @@
   "loc.button": "Кнопка",
   "loc.checkbox": "Чекбокс",
   "loc.checkable.get.state": "Получение состояния",
-  "loc.checkable.state": "Cостояние: [{0}]",
+  "loc.checkable.state": "Состояние: [{0}]",
   "loc.clicking": "Клик",
   "loc.clicking.double": "Двойной Клик",
   "loc.clicking.js": "Клик посредством JavaScript",
@@ -40,9 +40,9 @@
   "loc.combobox.get.text.js": "Получение списка значений посредством JavaScript",
   "loc.combobox.texts": "Список текстов опций: [{0}]",
   "loc.combobox.values": "Список значений: [{0}]",
-  "loc.el.getattr": "Получение аттрибута '{0}'",
-  "loc.el.attr.value": "Значение аттрибута '{0}': [{1}]",
-  "loc.el.attr.set": "Установка значения аттрибута '{0}': [{1}]",
+  "loc.el.getattr": "Получение атрибута '{0}'",
+  "loc.el.attr.value": "Значение атрибута '{0}': [{1}]",
+  "loc.el.attr.set": "Установка значения атрибута '{0}': [{1}]",
   "loc.el.cssvalue": "Получение значения css '{0}'",
   "loc.el.execute.pinnedjs": "Исполнение закреплённого JavaScript",
   "loc.el.execute.pinnedjs.result": "Результат исполнения закреплённого JavaScript: [{0}]",
@@ -86,6 +86,12 @@
   "loc.browser.devtools.command.execute.result": "Результат DevTools команды: [{0}]",
   "loc.browser.network.event.requestsent.add": "Подписываемся на событие отправки сетевого запроса",
   "loc.browser.network.event.requestsent.remove": "Отписываемся от события отправки сетевого запроса",
+  "loc.browser.network.event.requestsent.log.info": "Отправлен HTTP запрос:\r\nМетод: \t\t{0}, \r\nURL: \t\t\t{1}, \r\nID запроса: \t{2}",
+  "loc.browser.network.event.requestsent.log.headers": "Заголовки запроса:\r\n{{{0}\r\n}}",
+  "loc.browser.network.event.requestsent.log.data": "POST данные запроса:\r\n{0}",
+  "loc.browser.network.event.responsereceived.log.info": "Получен HTTP ответ:\r\nСтатус-код: \t{0}, \r\nURL: \t\t\t{1}, \r\nТип ресурса: \t{2}, \r\nID запроса: \t{3}",
+  "loc.browser.network.event.responsereceived.log.headers": "Заголовки ответа:\r\n{{{0}\r\n}}",
+  "loc.browser.network.event.responsereceived.log.body": "Тело ответа:\r\n{0}",
   "loc.browser.network.event.responsereceived.add": "Подписываемся на событие получения сетевого ответа",
   "loc.browser.network.event.responsereceived.remove": "Отписываемся от события получения сетевого ответа",
   "loc.browser.network.handler.authentication.add": "Добавление обработчика базовой аутентификации",
