Update readme (add template project reference) - update nuget reference in test project - fix localization files

--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
@@ -70,8 +70,8 @@
   "loc.text.field": "Текстовое поле",
   "loc.text.sending.key": "Нажатие клавиши '{0}'",
   "loc.text.typing": "Ввод текста '{0}'",
-  "loc.browser.switch.to.tab.handle": "Переключение на новую вкладку по дескриптору '{0}'",
-  "loc.browser.switch.to.tab.index": "Переключение на новую вкладку по индексу '{0}'",
+  "loc.browser.switch.to.tab.handle": "Переключение на вкладку по дескриптору '{0}'",
+  "loc.browser.switch.to.tab.index": "Переключение на вкладку по индексу '{0}'",
   "loc.browser.switch.to.new.tab": "Переключение на новую вкладку",
   "loc.browser.get.tab.handles": "Получение списка дескрипторов открытых вкладок",
   "loc.browser.get.tab.handle": "Получение дескриптора текущей вкладки",
