--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/uk.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/uk.json
@@ -5,6 +5,7 @@
   "loc.browser.forward": "Перехід до наступної сторінки",
   "loc.browser.capabilities": "Отримані можливості браузера з файлу налаштувань: {0}",
   "loc.browser.options": "Отримані параметри профілю браузера з файлу налаштувань: {0}",
+  "loc.browser.loggingPreferences": "Отримані налаштування логовання браузера з файлу налаштувань: {0}",
   "loc.browser.driver.quit": "Закриття браузера",
   "loc.browser.getUrl": "Отримання адреси поточної сторінки",
   "loc.browser.url.value": "Адреса поточної сторінки: [{0}]",
