Fix bug in ComboBox selectByContains method, and coding issues. Add localization values for logging

--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/pl.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/pl.json
@@ -40,7 +40,11 @@
   "loc.combobox.get.values": "Pobieranie listy wartości",
   "loc.combobox.get.text.js": "Pobieranie wybranego tekstu przez JavaScript",
   "loc.combobox.texts": "Lista tekstów opcji: [{0}]",
-  "loc.combobox.values": "Lista wartości: [{0}]",
+  "loc.combobox.values": "Lista wartości: [{0}]",  
+  "loc.multichoicebox": "Pole kombi z multiwyborem",
+  "loc.multichoicebox.select.all": "Wybieranie wszystkich wartości",
+  "loc.multichoicebox.deselect.all": "Anulowanie wybierania wszystkich wartości",
+  "loc.multichoicebox.deselect.by.text": "Anulowanie wybierania wartości z tekstem '{0}'",
   "loc.el.getattr": "Pobieranie atrybutu '{0}'",
   "loc.el.attr.value": "Wartość atrybutu '{0}': [{1}]",
   "loc.el.attr.set": "Ustawienie wartości atrybutu '{0}': [{1}]",
@@ -64,6 +68,7 @@
   "loc.scrolling.center.js": "Przewijanie do centrum przez JavaScript",
   "loc.scrolling.js": "Przewijanie przez JavaScript",
   "loc.selecting.value": "Wybieranie wartości - '{0}'",
+  "loc.deselecting.value": "Anulowanie wybierania wartości - '{0}'",
   "loc.send.text": "Ustawianie tekstu - '{0}'",
   "loc.setting.value": "Ustawienie wartości - '{0}'",
   "loc.text.clearing": "Oczyszczenie",
