--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
@@ -41,6 +41,10 @@
   "loc.combobox.get.text.js": "Получение списка значений посредством JavaScript",
   "loc.combobox.texts": "Список текстов опций: [{0}]",
   "loc.combobox.values": "Список значений: [{0}]",
+  "loc.multichoicebox": "Комбобокс с мультивыбором",
+  "loc.multichoicebox.select.all": "Выбор всех значений",
+  "loc.multichoicebox.deselect.all": "Отмена выбора всех значений",
+  "loc.multichoicebox.deselect.by.text": "Отмена выбора значения с текстом '{0}'",
   "loc.el.getattr": "Получение атрибута '{0}'",
   "loc.el.attr.value": "Значение атрибута '{0}': [{1}]",
   "loc.el.attr.set": "Установка значения атрибута '{0}': [{1}]",
@@ -64,6 +68,7 @@
   "loc.scrolling.center.js": "Скроллинг в центр посредством JavaScript",
   "loc.scrolling.js": "Скроллинг с помощью JavaScript",
   "loc.selecting.value": "Выбор значения - '{0}'",
+  "loc.deselecting.value": "Отмена выбора значения - '{0}'",
   "loc.send.text": "Ввод текста - '{0}'",
   "loc.setting.value": "Установка значения - '{0}'",
   "loc.text.clearing": "Очистка",
