--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/be.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/be.json
@@ -41,6 +41,10 @@
   "loc.combobox.get.text.js": "Атрымліваем выбраны тэкст праз JavaScript",
   "loc.combobox.texts": "Спіс тэкстаў опцыяў: [{0}]",
   "loc.combobox.values": "Спіс значэнняў: [{0}]",
+  "loc.multichoicebox": "Камбабокс з мульцівыбарам",
+  "loc.multichoicebox.select.all": "Выбіраем усе значэнні",
+  "loc.multichoicebox.deselect.all": "Адмяняем выбар усіх значэнняў",
+  "loc.multichoicebox.deselect.by.text": "Адмяняем выбар значэння з тэкстам '{0}'",
   "loc.el.getattr": "Атрымліваем атрыбут '{0}'",
   "loc.el.attr.value": "Значэнне атрыбута '{0}': [{1}]",
   "loc.el.attr.set": "Задаем значэнне атрыбута '{0}': [{1}]",
@@ -64,6 +68,7 @@
   "loc.scrolling.center.js": "Пракручваем старонку да цэнтра элемента праз JavaScript",
   "loc.scrolling.js": "Пракручваем старонку праз JavaScript",
   "loc.selecting.value": "Выбіраем значэнне - '{0}'",
+  "loc.deselecting.value": "Адмяняем выбар значэння - '{0}'",
   "loc.send.text": "Задаем тэкст - '{0}'",
   "loc.setting.value": "Задаем значэнне - '{0}'",
   "loc.text.clearing": "Ачышчаем",
