--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
@@ -41,6 +41,10 @@
   "loc.combobox.get.text.js": "Getting selected text via JavaScript",
   "loc.combobox.texts": "Option texts: [{0}]",
   "loc.combobox.values": "Option values: [{0}]",
+  "loc.multichoicebox": "Multi-choice ComboBox",
+  "loc.multichoicebox.select.all": "Select all",
+  "loc.multichoicebox.deselect.all": "Deselect all",
+  "loc.multichoicebox.deselect.by.text": "Deselecting value by text '{0}'",
   "loc.el.getattr": "Getting attribute '{0}'",
   "loc.el.attr.value": "Value of attribute '{0}': [{1}]",
   "loc.el.attr.set": "Setting value of attribute '{0}': [{1}]",
@@ -64,6 +68,7 @@
   "loc.scrolling.center.js": "Scrolling to the center via JavaScript",
   "loc.scrolling.js": "Scrolling via JavaScript",
   "loc.selecting.value": "Selecting value - '{0}'",
+  "loc.deselecting.value": "Deselecting value - '{0}'",
   "loc.send.text": "Setting text - '{0}'",
   "loc.setting.value": "Setting value - '{0}'",
   "loc.text.clearing": "Clearing",
