--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/uk.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/uk.json
@@ -41,6 +41,10 @@
   "loc.combobox.get.text.js": "Отримання вибраного тексту за допомогою JavaScript",
   "loc.combobox.texts": "Тексти опцій: [{0}]",
   "loc.combobox.values": "Значення опцій: [{0}]",
+  "loc.multichoicebox": "Комбобокс з мультівибором",
+  "loc.multichoicebox.select.all": "Вибір всіх значень",
+  "loc.multichoicebox.deselect.all": "Скасування вибору всіх значень",
+  "loc.multichoicebox.deselect.by.text": "Скасування вибору значення за текстом '{0}'",
   "loc.el.getattr": "Отримання атрибута '{0}'",
   "loc.el.attr.value": "Значення атрибута '{0}': [{1}]",
   "loc.el.attr.set": "Встановлення значення атрибута '{0}': [{1}]",
@@ -64,6 +68,7 @@
   "loc.scrolling.center.js": "Прокрутка до центру за допомогою JavaScript",
   "loc.scrolling.js": "Прокрутка за допомогою JavaScript",
   "loc.selecting.value": "Вибір значення - '{0}'",
+  "loc.deselecting.value": "Скасування выбору значення - '{0}'",
   "loc.send.text": "Встановлення тексту - '{0}'",
   "loc.setting.value": "Встановлення значення - '{0}'",
   "loc.text.clearing": "Очищення",
