Add browser window navigation - update to Selenium 4.20.0 and NLog 5.3.2

--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/be.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/be.json
@@ -76,13 +76,22 @@
   "loc.text.field": "Тэкставае поле",
   "loc.text.sending.key": "Націскаем клавішу '{0}'",
   "loc.text.typing": "Уводзім '{0}'",
-  "loc.browser.switch.to.tab.handle": "Пераключэнне на ўкладку па дэскрыптару '{0}'",
-  "loc.browser.switch.to.tab.index": "Пераключэнне на ўкладку па індэксе '{0}'",
-  "loc.browser.switch.to.new.tab": "Пераключэнне на новую ўкладку",
-  "loc.browser.get.tab.handles": "Атрыманне спісу дэскрыптараў адкрытых укладак",
-  "loc.browser.get.tab.handle": "Атрыманне дэскрыптара бягучай укладкі",
-  "loc.browser.tab.open.new": "Адкрыццё новай укладкі",
-  "loc.browser.tab.close": "Закрыццё ўкладкі",
+  "loc.browser.switch.to.tab.handle": "Пераключаемся на ўкладку па дэскрыптары '{0}'",
+  "loc.browser.switch.to.tab.index": "Пераключаемся на ўкладку па індэксе '{0}'",
+  "loc.browser.switch.to.new.tab": "Пераключаемся на новую ўкладку",
+  "loc.browser.get.tab.handles": "Атрымліваем спіс дэскрыптараў адкрытых укладак",
+  "loc.browser.get.tab.handle": "Атрымліваем дэскрыптар бягучай укладкі",
+  "loc.browser.tab.open.new": "Адкрываем новую ўкладку",
+  "loc.browser.tab.close": "Закрываем укладку",
+  "loc.browser.navigate.in.new.tab": "Пераходзім па адрасе ў новай укладцы - '{0}'",
+  "loc.browser.switch.to.window.handle": "Пераключаемся на акно па дэскрыптары '{0}'",
+  "loc.browser.switch.to.window.index": "Пераключаемся на акно па індэксе '{0}'",
+  "loc.browser.switch.to.new.window": "Пераключаемся на новае акно",
+  "loc.browser.get.window.handles": "Атрымліваем спіс дэскрыптараў адкрытых вокнаў",
+  "loc.browser.get.window.handle": "Атрымліваем дэскрыптар бягучага акна",
+  "loc.browser.window.open.new": "Адкрываем новае акно",
+  "loc.browser.window.close": "Закрываем акно",
+  "loc.browser.navigate.in.new.window": "Пераходзім па адрасе ў новым акне - '{0}'",
   "loc.browser.devtools.session.isactive": "Правяраем, ці актыўная DevTools сэсія",
   "loc.browser.devtools.session.isactive.result": "Ці актыўная DevTools сэсія: [{0}]",
   "loc.browser.devtools.session.close": "Завяршаем сэсію DevTools",
