--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
@@ -83,6 +83,15 @@
   "loc.browser.get.tab.handle": "Getting current tab handle",
   "loc.browser.tab.open.new": "Opening new tab",
   "loc.browser.tab.close": "Closing tab",
+  "loc.browser.navigate.in.new.tab": "Navigate to URL in new tab - '{0}'",
+  "loc.browser.switch.to.window.handle": "Switching to window by handle '{0}'",
+  "loc.browser.switch.to.window.index": "Switching to window by index '{0}'",
+  "loc.browser.switch.to.new.window": "Switching to new window",
+  "loc.browser.get.window.handles": "Getting window handles",
+  "loc.browser.get.window.handle": "Getting current window handle",
+  "loc.browser.window.open.new": "Opening new window",
+  "loc.browser.window.close": "Closing window",
+  "loc.browser.navigate.in.new.window": "Navigate to URL in new window - '{0}'",
   "loc.browser.devtools.session.isactive": "Checking if DevTools session is active",
   "loc.browser.devtools.session.isactive.result": "Is DevTools session active: [{0}]",
   "loc.browser.devtools.session.close": "Closing DevTools session",
