--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/pl.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/pl.json
@@ -12,7 +12,7 @@
   "loc.browser.grid": "Ustawianie WebDriver z Selenium Grid hub",
   "loc.browser.grid.fail": "Ustawianie sterownika z Selenium Grid hub nie powiodło się",
   "loc.browser.maximize": "Maksymalizacja okna przeglądarki",
-  "loc.browser.navigate": "Przejdź do adresu URL - '{0}'",
+  "loc.browser.navigate": "Przejście do adresu URL - '{0}'",
   "loc.browser.page.wait": "Oczekiwanie na załadowanie strony",
   "loc.browser.page.timeout": "Przekroczono limit czasu ładowania strony",
   "loc.browser.ready": "Przeglądarka '{0}' gotowa...",
@@ -40,7 +40,7 @@
   "loc.combobox.get.values": "Pobieranie listy wartości",
   "loc.combobox.get.text.js": "Pobieranie wybranego tekstu przez JavaScript",
   "loc.combobox.texts": "Lista tekstów opcji: [{0}]",
-  "loc.combobox.values": "Lista wartości: [{0}]",  
+  "loc.combobox.values": "Lista wartości: [{0}]",
   "loc.multichoicebox": "Pole kombi z multiwyborem",
   "loc.multichoicebox.select.all": "Wybieranie wszystkich wartości",
   "loc.multichoicebox.deselect.all": "Anulowanie wybierania wszystkich wartości",
@@ -83,6 +83,15 @@
   "loc.browser.get.tab.handle": "Pobieranie deskryptora bieżącej karty",
   "loc.browser.tab.open.new": "Otwieranie nowej karty",
   "loc.browser.tab.close": "Zamknięcie karty",
+  "loc.browser.navigate.in.new.tab": "Przejście do adresu URL w nowej karcie - '{0}'",
+  "loc.browser.switch.to.window.handle": "Przełączanie na okno według deskryptora '{0}'",
+  "loc.browser.switch.to.window.index": "Przełączanie na okno według indeksu '{0}'",
+  "loc.browser.switch.to.new.window": "Przełączanie na nowe okno",
+  "loc.browser.get.window.handles": "Pobieranie listy deskryptorów otwartych okien",
+  "loc.browser.get.window.handle": "Pobieranie deskryptora bieżącego okna",
+  "loc.browser.window.open.new": "Otwieranie nowego okna",
+  "loc.browser.window.close": "Zamknięcie okna",
+  "loc.browser.navigate.in.new.window": "Przejście do adresu URL w nowym oknie - '{0}'",
   "loc.browser.devtools.session.isactive": "Sprawdzanie, czy sesja DevTools jest aktywna",
   "loc.browser.devtools.session.isactive.result": "Czy sesja DevTools jest aktywna: [{0}]",
   "loc.browser.devtools.session.close": "Zamykanie sesji DevTools",
